fixed the jumping button in product cards

--- a/src/css/products.css
+++ b/src/css/products.css
@@ -15,6 +15,9 @@
 }
 
 .product-card-prod {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
   max-width: 295px;
   border-radius: 20px;
   background: var(--white-color);
